[VIDEO] Try other method to prevent fullscreen on iphone

--- a/src/components/VideoFeed.css
+++ b/src/components/VideoFeed.css
@@ -1,13 +1,16 @@
 .video-global-div {
     height: 93vh;
+    background-color: aliceblue;
 }
 
 .video {
+    height: 93vh;
+
     position: relative;
     top: 0;
     left: 0;
     display: block;
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
     object-fit: cover;
 }
